// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`drop_operator.sql > line 1 1`] = `
[
  "CREATE OPERATOR === (
        PROCEDURE = int8eq,
        LEFTARG = bigint,
        RIGHTARG = bigint,
        COMMUTATOR = ===
)",
  {
    "stmts": [
      {
        "stmt": {
          "DefineStmt": {
            "definition": [
              {
                "DefElem": {
                  "arg": {
                    "TypeName": {
                      "location": 42,
                      "names": [
                        {
                          "String": {
                            "sval": "int8eq",
                          },
                        },
                      ],
                      "typemod": -1,
                    },
                  },
                  "defaction": "DEFELEM_UNSPEC",
                  "defname": "procedure",
                  "location": 30,
                },
              },
              {
                "DefElem": {
                  "arg": {
                    "TypeName": {
                      "location": 68,
                      "names": [
                        {
                          "String": {
                            "sval": "pg_catalog",
                          },
                        },
                        {
                          "String": {
                            "sval": "int8",
                          },
                        },
                      ],
                      "typemod": -1,
                    },
                  },
                  "defaction": "DEFELEM_UNSPEC",
                  "defname": "leftarg",
                  "location": 58,
                },
              },
              {
                "DefElem": {
                  "arg": {
                    "TypeName": {
                      "location": 95,
                      "names": [
                        {
                          "String": {
                            "sval": "pg_catalog",
                          },
                        },
                        {
                          "String": {
                            "sval": "int8",
                          },
                        },
                      ],
                      "typemod": -1,
                    },
                  },
                  "defaction": "DEFELEM_UNSPEC",
                  "defname": "rightarg",
                  "location": 84,
                },
              },
              {
                "DefElem": {
                  "arg": {
                    "List": {
                      "items": [
                        {
                          "String": {
                            "sval": "===",
                          },
                        },
                      ],
                    },
                  },
                  "defaction": "DEFELEM_UNSPEC",
                  "defname": "commutator",
                  "location": 111,
                },
              },
            ],
            "defnames": [
              {
                "String": {
                  "sval": "===",
                },
              },
            ],
            "kind": "OBJECT_OPERATOR",
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`drop_operator.sql > line 8 1`] = `
[
  "CREATE OPERATOR !== (
        PROCEDURE = int8ne,
        LEFTARG = bigint,
        RIGHTARG = bigint,
        NEGATOR = ===,
        COMMUTATOR = !==
)",
  {
    "stmts": [
      {
        "stmt": {
          "DefineStmt": {
            "definition": [
              {
                "DefElem": {
                  "arg": {
                    "TypeName": {
                      "location": 42,
                      "names": [
                        {
                          "String": {
                            "sval": "int8ne",
                          },
                        },
                      ],
                      "typemod": -1,
                    },
                  },
                  "defaction": "DEFELEM_UNSPEC",
                  "defname": "procedure",
                  "location": 30,
                },
              },
              {
                "DefElem": {
                  "arg": {
                    "TypeName": {
                      "location": 68,
                      "names": [
                        {
                          "String": {
                            "sval": "pg_catalog",
                          },
                        },
                        {
                          "String": {
                            "sval": "int8",
                          },
                        },
                      ],
                      "typemod": -1,
                    },
                  },
                  "defaction": "DEFELEM_UNSPEC",
                  "defname": "leftarg",
                  "location": 58,
                },
              },
              {
                "DefElem": {
                  "arg": {
                    "TypeName": {
                      "location": 95,
                      "names": [
                        {
                          "String": {
                            "sval": "pg_catalog",
                          },
                        },
                        {
                          "String": {
                            "sval": "int8",
                          },
                        },
                      ],
                      "typemod": -1,
                    },
                  },
                  "defaction": "DEFELEM_UNSPEC",
                  "defname": "rightarg",
                  "location": 84,
                },
              },
              {
                "DefElem": {
                  "arg": {
                    "List": {
                      "items": [
                        {
                          "String": {
                            "sval": "===",
                          },
                        },
                      ],
                    },
                  },
                  "defaction": "DEFELEM_UNSPEC",
                  "defname": "negator",
                  "location": 111,
                },
              },
              {
                "DefElem": {
                  "arg": {
                    "List": {
                      "items": [
                        {
                          "String": {
                            "sval": "!==",
                          },
                        },
                      ],
                    },
                  },
                  "defaction": "DEFELEM_UNSPEC",
                  "defname": "commutator",
                  "location": 134,
                },
              },
            ],
            "defnames": [
              {
                "String": {
                  "sval": "!==",
                },
              },
            ],
            "kind": "OBJECT_OPERATOR",
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`drop_operator.sql > line 16 1`] = `
[
  "DROP OPERATOR !==(bigint, bigint)",
  {
    "stmts": [
      {
        "stmt": {
          "DropStmt": {
            "behavior": "DROP_RESTRICT",
            "objects": [
              {
                "ObjectWithArgs": {
                  "objargs": [
                    {
                      "TypeName": {
                        "location": 18,
                        "names": [
                          {
                            "String": {
                              "sval": "pg_catalog",
                            },
                          },
                          {
                            "String": {
                              "sval": "int8",
                            },
                          },
                        ],
                        "typemod": -1,
                      },
                    },
                    {
                      "TypeName": {
                        "location": 26,
                        "names": [
                          {
                            "String": {
                              "sval": "pg_catalog",
                            },
                          },
                          {
                            "String": {
                              "sval": "int8",
                            },
                          },
                        ],
                        "typemod": -1,
                      },
                    },
                  ],
                  "objname": [
                    {
                      "String": {
                        "sval": "!==",
                      },
                    },
                  ],
                },
              },
            ],
            "removeType": "OBJECT_OPERATOR",
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`drop_operator.sql > line 18 1`] = `
[
  "SELECT  ctid, oprcom
FROM    pg_catalog.pg_operator fk
WHERE   oprcom != 0 AND
        NOT EXISTS(SELECT 1 FROM pg_catalog.pg_operator pk WHERE pk.oid = fk.oprcom)",
  {
    "stmts": [
      {
        "stmt": {
          "SelectStmt": {
            "fromClause": [
              {
                "RangeVar": {
                  "alias": {
                    "aliasname": "fk",
                  },
                  "inh": true,
                  "location": 29,
                  "relname": "pg_operator",
                  "relpersistence": "p",
                  "schemaname": "pg_catalog",
                },
              },
            ],
            "limitOption": "LIMIT_OPTION_DEFAULT",
            "op": "SETOP_NONE",
            "targetList": [
              {
                "ResTarget": {
                  "location": 8,
                  "val": {
                    "ColumnRef": {
                      "fields": [
                        {
                          "String": {
                            "sval": "ctid",
                          },
                        },
                      ],
                      "location": 8,
                    },
                  },
                },
              },
              {
                "ResTarget": {
                  "location": 14,
                  "val": {
                    "ColumnRef": {
                      "fields": [
                        {
                          "String": {
                            "sval": "oprcom",
                          },
                        },
                      ],
                      "location": 14,
                    },
                  },
                },
              },
            ],
            "whereClause": {
              "BoolExpr": {
                "args": [
                  {
                    "A_Expr": {
                      "kind": "AEXPR_OP",
                      "lexpr": {
                        "ColumnRef": {
                          "fields": [
                            {
                              "String": {
                                "sval": "oprcom",
                              },
                            },
                          ],
                          "location": 63,
                        },
                      },
                      "location": 70,
                      "name": [
                        {
                          "String": {
                            "sval": "<>",
                          },
                        },
                      ],
                      "rexpr": {
                        "A_Const": {
                          "ival": {},
                          "location": 73,
                        },
                      },
                    },
                  },
                  {
                    "BoolExpr": {
                      "args": [
                        {
                          "SubLink": {
                            "location": 91,
                            "subLinkType": "EXISTS_SUBLINK",
                            "subselect": {
                              "SelectStmt": {
                                "fromClause": [
                                  {
                                    "RangeVar": {
                                      "alias": {
                                        "aliasname": "pk",
                                      },
                                      "inh": true,
                                      "location": 112,
                                      "relname": "pg_operator",
                                      "relpersistence": "p",
                                      "schemaname": "pg_catalog",
                                    },
                                  },
                                ],
                                "limitOption": "LIMIT_OPTION_DEFAULT",
                                "op": "SETOP_NONE",
                                "targetList": [
                                  {
                                    "ResTarget": {
                                      "location": 105,
                                      "val": {
                                        "A_Const": {
                                          "ival": {
                                            "ival": 1,
                                          },
                                          "location": 105,
                                        },
                                      },
                                    },
                                  },
                                ],
                                "whereClause": {
                                  "A_Expr": {
                                    "kind": "AEXPR_OP",
                                    "lexpr": {
                                      "ColumnRef": {
                                        "fields": [
                                          {
                                            "String": {
                                              "sval": "pk",
                                            },
                                          },
                                          {
                                            "String": {
                                              "sval": "oid",
                                            },
                                          },
                                        ],
                                        "location": 144,
                                      },
                                    },
                                    "location": 151,
                                    "name": [
                                      {
                                        "String": {
                                          "sval": "=",
                                        },
                                      },
                                    ],
                                    "rexpr": {
                                      "ColumnRef": {
                                        "fields": [
                                          {
                                            "String": {
                                              "sval": "fk",
                                            },
                                          },
                                          {
                                            "String": {
                                              "sval": "oprcom",
                                            },
                                          },
                                        ],
                                        "location": 153,
                                      },
                                    },
                                  },
                                },
                              },
                            },
                          },
                        },
                      ],
                      "boolop": "NOT_EXPR",
                      "location": 87,
                    },
                  },
                ],
                "boolop": "AND_EXPR",
                "location": 75,
              },
            },
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`drop_operator.sql > line 23 1`] = `
[
  "SELECT  ctid, oprnegate
FROM    pg_catalog.pg_operator fk
WHERE   oprnegate != 0 AND
        NOT EXISTS(SELECT 1 FROM pg_catalog.pg_operator pk WHERE pk.oid = fk.oprnegate)",
  {
    "stmts": [
      {
        "stmt": {
          "SelectStmt": {
            "fromClause": [
              {
                "RangeVar": {
                  "alias": {
                    "aliasname": "fk",
                  },
                  "inh": true,
                  "location": 32,
                  "relname": "pg_operator",
                  "relpersistence": "p",
                  "schemaname": "pg_catalog",
                },
              },
            ],
            "limitOption": "LIMIT_OPTION_DEFAULT",
            "op": "SETOP_NONE",
            "targetList": [
              {
                "ResTarget": {
                  "location": 8,
                  "val": {
                    "ColumnRef": {
                      "fields": [
                        {
                          "String": {
                            "sval": "ctid",
                          },
                        },
                      ],
                      "location": 8,
                    },
                  },
                },
              },
              {
                "ResTarget": {
                  "location": 14,
                  "val": {
                    "ColumnRef": {
                      "fields": [
                        {
                          "String": {
                            "sval": "oprnegate",
                          },
                        },
                      ],
                      "location": 14,
                    },
                  },
                },
              },
            ],
            "whereClause": {
              "BoolExpr": {
                "args": [
                  {
                    "A_Expr": {
                      "kind": "AEXPR_OP",
                      "lexpr": {
                        "ColumnRef": {
                          "fields": [
                            {
                              "String": {
                                "sval": "oprnegate",
                              },
                            },
                          ],
                          "location": 66,
                        },
                      },
                      "location": 76,
                      "name": [
                        {
                          "String": {
                            "sval": "<>",
                          },
                        },
                      ],
                      "rexpr": {
                        "A_Const": {
                          "ival": {},
                          "location": 79,
                        },
                      },
                    },
                  },
                  {
                    "BoolExpr": {
                      "args": [
                        {
                          "SubLink": {
                            "location": 97,
                            "subLinkType": "EXISTS_SUBLINK",
                            "subselect": {
                              "SelectStmt": {
                                "fromClause": [
                                  {
                                    "RangeVar": {
                                      "alias": {
                                        "aliasname": "pk",
                                      },
                                      "inh": true,
                                      "location": 118,
                                      "relname": "pg_operator",
                                      "relpersistence": "p",
                                      "schemaname": "pg_catalog",
                                    },
                                  },
                                ],
                                "limitOption": "LIMIT_OPTION_DEFAULT",
                                "op": "SETOP_NONE",
                                "targetList": [
                                  {
                                    "ResTarget": {
                                      "location": 111,
                                      "val": {
                                        "A_Const": {
                                          "ival": {
                                            "ival": 1,
                                          },
                                          "location": 111,
                                        },
                                      },
                                    },
                                  },
                                ],
                                "whereClause": {
                                  "A_Expr": {
                                    "kind": "AEXPR_OP",
                                    "lexpr": {
                                      "ColumnRef": {
                                        "fields": [
                                          {
                                            "String": {
                                              "sval": "pk",
                                            },
                                          },
                                          {
                                            "String": {
                                              "sval": "oid",
                                            },
                                          },
                                        ],
                                        "location": 150,
                                      },
                                    },
                                    "location": 157,
                                    "name": [
                                      {
                                        "String": {
                                          "sval": "=",
                                        },
                                      },
                                    ],
                                    "rexpr": {
                                      "ColumnRef": {
                                        "fields": [
                                          {
                                            "String": {
                                              "sval": "fk",
                                            },
                                          },
                                          {
                                            "String": {
                                              "sval": "oprnegate",
                                            },
                                          },
                                        ],
                                        "location": 159,
                                      },
                                    },
                                  },
                                },
                              },
                            },
                          },
                        },
                      ],
                      "boolop": "NOT_EXPR",
                      "location": 93,
                    },
                  },
                ],
                "boolop": "AND_EXPR",
                "location": 81,
              },
            },
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`drop_operator.sql > line 28 1`] = `
[
  "DROP OPERATOR ===(bigint, bigint)",
  {
    "stmts": [
      {
        "stmt": {
          "DropStmt": {
            "behavior": "DROP_RESTRICT",
            "objects": [
              {
                "ObjectWithArgs": {
                  "objargs": [
                    {
                      "TypeName": {
                        "location": 18,
                        "names": [
                          {
                            "String": {
                              "sval": "pg_catalog",
                            },
                          },
                          {
                            "String": {
                              "sval": "int8",
                            },
                          },
                        ],
                        "typemod": -1,
                      },
                    },
                    {
                      "TypeName": {
                        "location": 26,
                        "names": [
                          {
                            "String": {
                              "sval": "pg_catalog",
                            },
                          },
                          {
                            "String": {
                              "sval": "int8",
                            },
                          },
                        ],
                        "typemod": -1,
                      },
                    },
                  ],
                  "objname": [
                    {
                      "String": {
                        "sval": "===",
                      },
                    },
                  ],
                },
              },
            ],
            "removeType": "OBJECT_OPERATOR",
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`drop_operator.sql > line 30 1`] = `
[
  "CREATE OPERATOR <| (
        PROCEDURE = int8lt,
        LEFTARG = bigint,
        RIGHTARG = bigint
)",
  {
    "stmts": [
      {
        "stmt": {
          "DefineStmt": {
            "definition": [
              {
                "DefElem": {
                  "arg": {
                    "TypeName": {
                      "location": 41,
                      "names": [
                        {
                          "String": {
                            "sval": "int8lt",
                          },
                        },
                      ],
                      "typemod": -1,
                    },
                  },
                  "defaction": "DEFELEM_UNSPEC",
                  "defname": "procedure",
                  "location": 29,
                },
              },
              {
                "DefElem": {
                  "arg": {
                    "TypeName": {
                      "location": 67,
                      "names": [
                        {
                          "String": {
                            "sval": "pg_catalog",
                          },
                        },
                        {
                          "String": {
                            "sval": "int8",
                          },
                        },
                      ],
                      "typemod": -1,
                    },
                  },
                  "defaction": "DEFELEM_UNSPEC",
                  "defname": "leftarg",
                  "location": 57,
                },
              },
              {
                "DefElem": {
                  "arg": {
                    "TypeName": {
                      "location": 94,
                      "names": [
                        {
                          "String": {
                            "sval": "pg_catalog",
                          },
                        },
                        {
                          "String": {
                            "sval": "int8",
                          },
                        },
                      ],
                      "typemod": -1,
                    },
                  },
                  "defaction": "DEFELEM_UNSPEC",
                  "defname": "rightarg",
                  "location": 83,
                },
              },
            ],
            "defnames": [
              {
                "String": {
                  "sval": "<|",
                },
              },
            ],
            "kind": "OBJECT_OPERATOR",
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`drop_operator.sql > line 36 1`] = `
[
  "CREATE OPERATOR |> (
        PROCEDURE = int8gt,
        LEFTARG = bigint,
        RIGHTARG = bigint,
        NEGATOR = <|,
        COMMUTATOR = <|
)",
  {
    "stmts": [
      {
        "stmt": {
          "DefineStmt": {
            "definition": [
              {
                "DefElem": {
                  "arg": {
                    "TypeName": {
                      "location": 41,
                      "names": [
                        {
                          "String": {
                            "sval": "int8gt",
                          },
                        },
                      ],
                      "typemod": -1,
                    },
                  },
                  "defaction": "DEFELEM_UNSPEC",
                  "defname": "procedure",
                  "location": 29,
                },
              },
              {
                "DefElem": {
                  "arg": {
                    "TypeName": {
                      "location": 67,
                      "names": [
                        {
                          "String": {
                            "sval": "pg_catalog",
                          },
                        },
                        {
                          "String": {
                            "sval": "int8",
                          },
                        },
                      ],
                      "typemod": -1,
                    },
                  },
                  "defaction": "DEFELEM_UNSPEC",
                  "defname": "leftarg",
                  "location": 57,
                },
              },
              {
                "DefElem": {
                  "arg": {
                    "TypeName": {
                      "location": 94,
                      "names": [
                        {
                          "String": {
                            "sval": "pg_catalog",
                          },
                        },
                        {
                          "String": {
                            "sval": "int8",
                          },
                        },
                      ],
                      "typemod": -1,
                    },
                  },
                  "defaction": "DEFELEM_UNSPEC",
                  "defname": "rightarg",
                  "location": 83,
                },
              },
              {
                "DefElem": {
                  "arg": {
                    "List": {
                      "items": [
                        {
                          "String": {
                            "sval": "<|",
                          },
                        },
                      ],
                    },
                  },
                  "defaction": "DEFELEM_UNSPEC",
                  "defname": "negator",
                  "location": 110,
                },
              },
              {
                "DefElem": {
                  "arg": {
                    "List": {
                      "items": [
                        {
                          "String": {
                            "sval": "<|",
                          },
                        },
                      ],
                    },
                  },
                  "defaction": "DEFELEM_UNSPEC",
                  "defname": "commutator",
                  "location": 132,
                },
              },
            ],
            "defnames": [
              {
                "String": {
                  "sval": "|>",
                },
              },
            ],
            "kind": "OBJECT_OPERATOR",
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`drop_operator.sql > line 44 1`] = `
[
  "DROP OPERATOR |>(bigint, bigint)",
  {
    "stmts": [
      {
        "stmt": {
          "DropStmt": {
            "behavior": "DROP_RESTRICT",
            "objects": [
              {
                "ObjectWithArgs": {
                  "objargs": [
                    {
                      "TypeName": {
                        "location": 17,
                        "names": [
                          {
                            "String": {
                              "sval": "pg_catalog",
                            },
                          },
                          {
                            "String": {
                              "sval": "int8",
                            },
                          },
                        ],
                        "typemod": -1,
                      },
                    },
                    {
                      "TypeName": {
                        "location": 25,
                        "names": [
                          {
                            "String": {
                              "sval": "pg_catalog",
                            },
                          },
                          {
                            "String": {
                              "sval": "int8",
                            },
                          },
                        ],
                        "typemod": -1,
                      },
                    },
                  ],
                  "objname": [
                    {
                      "String": {
                        "sval": "|>",
                      },
                    },
                  ],
                },
              },
            ],
            "removeType": "OBJECT_OPERATOR",
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`drop_operator.sql > line 56 1`] = `
[
  "DROP OPERATOR <|(bigint, bigint)",
  {
    "stmts": [
      {
        "stmt": {
          "DropStmt": {
            "behavior": "DROP_RESTRICT",
            "objects": [
              {
                "ObjectWithArgs": {
                  "objargs": [
                    {
                      "TypeName": {
                        "location": 17,
                        "names": [
                          {
                            "String": {
                              "sval": "pg_catalog",
                            },
                          },
                          {
                            "String": {
                              "sval": "int8",
                            },
                          },
                        ],
                        "typemod": -1,
                      },
                    },
                    {
                      "TypeName": {
                        "location": 25,
                        "names": [
                          {
                            "String": {
                              "sval": "pg_catalog",
                            },
                          },
                          {
                            "String": {
                              "sval": "int8",
                            },
                          },
                        ],
                        "typemod": -1,
                      },
                    },
                  ],
                  "objname": [
                    {
                      "String": {
                        "sval": "<|",
                      },
                    },
                  ],
                },
              },
            ],
            "removeType": "OBJECT_OPERATOR",
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;
